--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "tslint-react": "^4.2.0",
     "typescript": "^3.7.3"
   },
+  "resolutions": {
+    "minimist": "^1.2.2"
+  },
   "jest": {
     "verbose": true,
     "collectCoverage": true,
